--- a/index.html
+++ b/index.html
@@ -38,21 +38,20 @@
 
     <main>
       <div>
-      <h1 id="welcome" class="section-title">Welcome!</h1>
+      <h1 class="subHeading">Welcome!</h1>
       <p>
         Hello There!! Welcome to Farm2Table, the "farmacy" you can trust! We are
         glad to have you here. At Farm2Table, we help farmers showcase their
-        produce. <br />
-        As a farmer, you will enjoy and have access to a bigger market, both
-        just locally and globally. This online agricultural marketplace connects
-        farmers to consumers directly. This is the ONLY place you can get fresh
-        produce from the farm with ease at an affordable price.
+        produce. <br/>
+        As a farmer, you will enjoy and have access to a bigger market, locally and globally. This online agricultural marketplace connects
+        farmers to consumers directly. This is the ONLY platform you can get fresh produce from the farm with ease at an affordable price.
       </p>
       <br />
     </div>
-    <div id="why_farm2t">
-      <div id="about">
-      <h2  class="section-title">Why Farm2Table</h2>
+    <div class="aboutSection">
+       <h2 class="subHeading">Why Farm2Table?</h2>
+      <div id= "why_farm2t">
+           <div id="about">
       <p>
         According to the UN, the world is not on track to achieve Zero Hunger by
         2030. 840 million will be affected by world hunger - a rise from the
@@ -71,20 +70,20 @@
       </div>
       <br />
     </div>
+      </div>
 
-      <div>
-        <h1 id="general_market" class="section-title">General Market</h1>
+      <div id="generalMktSection">
+        <h2 class="subHeading">General Market</h2>
         <div class="container">
           <div class="card">
             <div class="imgBx">
-              <img src="./Images/grains.jpg" width="400px" alt="Grains" />
+              <img src="./Images/grains.jpg" alt="Grains" />
             </div>
             <div class="content">
               <h3>Grains</h3>
               <br />
               <p>
-                Our farmers deal in grains ranging from rice, millets, maize,
-                soya.
+                Our farmers deal in grains ranging from rice, millets, maize, soya.
               </p>
               <br /><br />
             </div>
@@ -92,7 +91,7 @@
 
           <div class="card">
             <div class="imgBx">
-              <img src="./Images/vegies.jpg" width="400px" alt="Vegetables" />
+              <img src="./Images/vegies.jpg" alt="Vegetables" />
             </div>
             <div class="content">
               <h3>Vegetables</h3>
@@ -154,14 +153,14 @@
       </div>
 
       <div class="join">
-        <h1 id="join_us" nclass="section-title">Join Us</h1>
+        <h2 id="join_us" class="subHeading">Join Us</h2>
         <p>
           If you want to be a part of this wonderful market, register with us
         </p>
         <br />
-        <form onsubmit="return validate()" action="welcome.html" class="form">
+        <form onsubmit="return validate()" action="welcome.html" class="regForm">
           <input id="name" type="text" placeholder="Enter Your Name" /><br />
-          <input id="mail" type="email" placeholder="Enter your Email" /><br />
+          <input id="mail" type="email" placeholder="hi@email.com" /><br />
           <input
             id="pass"
             type="password"
