--- a/order.html
+++ b/order.html
@@ -71,12 +71,8 @@ submit.addEventListener("click", function() {
     
 </header>
 <body>
-  <aside >
-          <img id="logo" src="https://s3.amazonaws.com/logosnap/logos/2021/Jun/original-4361-60be57aa58e79wm.png" alt="farm2table_logo">
-          <p id="slogan">The World's Farmacy</p>
-        </aside>
-   
-        <form   onsubmit="return validate()" action="welcome2.html">
+    <div class="paymentCard">
+        <form   onsubmit="return validate()" action="">
             <label for="name">Name(Surname first)</label>
             <input id="name" type="text" placeholder="Enter Your Name"><br>
             <label for="email">Email</label>
@@ -131,9 +127,14 @@ submit.addEventListener("click", function() {
     
 </body>
 <footer>
-<p style="text-align: center;">You can contact us at <br>Tel.No: +254 456 7683 388596.<br>Address: Head Office at 9. Freedom Park, Gigiri, Nairobi, Kenya; Branch Office at 10, Allen Avenue, Ikeja, Lagos.
-</p>
-
-  <a id="logodesign" href=null>Logo source Logodesign.net</a>
+  <p class="footer-text">
+   You can contact us at <br />Tel. No: +254 456 7683 388596.<br />Address:
+   Head Office at 9. Freedom Park, Gigiri, Nairobi, Kenya; Branch Office at
+   10, Allen Avenue, Ikeja, Lagos.
+ </p>
+ <div id="team-text">
+ <span
+   >Programming queens-Team - Copyright &copy; 2021</span
+ ></div>
 </footer>
 </html>
