--- a/welcome.html
+++ b/welcome.html
@@ -32,8 +32,20 @@
         <nav id="navlink">
             <ul class="navbar">
                 <li>
-                    <a href="farm2table.html">Home</a>
-                    </li>
+                    <a href="#welcome">Welcome</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#general_market">General Market</a>
+                </li>
+                <li>
+                    <a href="#join_us">Join Us</a>
+                </li>
+                <li>
+                    <a href="buynow.html">Buy Now</a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -41,10 +53,30 @@
 </header>
 <body>
  <h1>Welcome Aboard!</h1>
- <p class="welcome"><strong>You can now start selling with us</strong></p>
+ <p class="welcome"><strong>You will be contacted by your vendor and receive your produce shortly!<br> Thank you for your continued patronage!!!</strong></p>
 </body>
 <footer>
-  
+  <div >
+    <nav id="navlink">
+        <ul class="navbar">
+            <li>
+                <a href="#welcome">Welcome</a>
+            </li>
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#general_market">General Market</a>
+            </li>
+            <li>
+                <a href="#join_us">Join Us</a>
+            </li>
+            <li>
+                <a href="buynow.html">Buy Now</a>
+            </li>
+        </ul>
+    </nav><br>
+</div>
 <p style="text-align: center;">You can contact us at <br>Tel.No: +254 456 7683 388596.<br>Address: Head Office at 9. Freedom Park, Gigiri, Nairobi, Kenya; Branch Office at 10, Allen Avenue, Ikeja, Lagos.
 </p>
 
